image for 1161 added

--- a/LeetCode/1161. Maximum Level Sum of a Binary Tree.md
+++ b/LeetCode/1161. Maximum Level Sum of a Binary Tree.md
@@ -7,7 +7,7 @@ Return the **smallest** level `x` such that the sum of all the values of nodes a
  
 
 **Example 1:**
-
+![img_8.png](img_8.png)
 ```
 Input: root = [1,7,0,7,-8,null,null]
 Output: 2
