92 stack solution added

--- a/LeetCode/92. Reverse Linked List II.md
+++ b/LeetCode/92. Reverse Linked List II.md
@@ -28,7 +28,7 @@ The number of nodes in the list is n.
 **Follow up:** Could you do it in **one pass**?
 
 
-## Solution
+## Tow Pointers
 ```python
 # Definition for singly-linked list.
 # class ListNode:
@@ -58,4 +58,40 @@ class Solution:
         return dummy.next
 ```
 
-TODO: recursion, stack.
+
+## Stack
+```python
+# Definition for singly-linked list.
+# class ListNode:
+#     def __init__(self, val=0, next=None):
+#         self.val = val
+#         self.next = next
+class Solution:
+    def reverseBetween(self, head: Optional[ListNode], left: int, right: int) -> Optional[ListNode]:
+        # three ways to solve: two pointers, recursion, stack.
+        if not head or left == right:
+            return head
+        dummy = ListNode(0, head)
+        prev = dummy
+        # prev reaches the node before left after left - 1 steps
+        for _ in range(left - 1):
+            prev = prev.next
+        # put all nodes needed to be reversed into stack
+        stack = []
+        # reverse start from current node
+        cur = prev.next
+        # there are (right - left + 1) nodes needed to be reversed
+        for _ in range(right - left + 1):
+            stack.append(cur)
+            cur = cur.next
+        # pop out is reversed, keep reconnecting
+        while stack:
+            # KEY: reverse is about putting last node after prev 
+            prev.next = stack.pop()
+            prev = prev.next
+        # reconnect the prev
+        prev.next = cur
+        return dummy.next
+```
+
+TODO: recursion.
