--- a/LeetCode/61. Rotate List.md
+++ b/LeetCode/61. Rotate List.md
@@ -4,13 +4,13 @@ Given the head of a linked list, rotate the list to the right by k places.
 
 
 **Example 1:**
-
+![img_14.png](img_14.png)
 ```
 Input: head = [1,2,3,4,5], k = 2
 Output: [4,5,1,2,3]
 ```
 **Example 2:**
-
+![img_15.png](img_15.png)
 ```
 Input: head = [0,1,2], k = 4
 Output: [2,0,1]
