move all image files into new directory.

--- a/LeetCode/2130. Maximum Twin Sum of a Linked List.md
+++ b/LeetCode/2130. Maximum Twin Sum of a Linked List.md
@@ -10,7 +10,7 @@ Given the head of a linked list with even length, return the maximum twin sum of
 
 
 **Example 1:**
-![img_26.png](img_26.png)
+![img_26.png](../Images/img_26.png)
 
 Input: `head = [5,4,2,1]`
 Output: `6`
@@ -22,7 +22,7 @@ Thus, the maximum twin sum of the linked list is 6.
 ```
 
 **Example 2:**
-![img_27.png](img_27.png)
+![img_27.png](../Images/img_27.png)
 
 **Input:** head = [4,2,2,3]
 **Output:** 7
@@ -35,7 +35,7 @@ Thus, the maximum twin sum of the linked list is max(7, 4) = 7.
 ```
 
 **Example 3:**
-![img_28.png](img_28.png)
+![img_28.png](../Images/img_28.png)
 
 
 ```
