--- a/LeetCode/230. Kth Smallest Element in a BST.md
+++ b/LeetCode/230. Kth Smallest Element in a BST.md
@@ -4,13 +4,13 @@ Given the `root` of a binary search tree, and an integer `k`, return *the `kth` 
 
 
 Example 1:
-![img_20.png](img_20.png)
+![img_20.png](../Images/img_20.png)
 ```
 Input: root = [3,1,4,null,2], k = 1
 Output: 1
 ```
 Example 2:
-![img_21.png](img_21.png)
+![img_21.png](../Images/img_21.png)
 ```
 Input: root = [5,3,6,2,4,null,null,1], k = 3
 Output: 3
