--- a/LeetCode/450. Delete Node in a BST.md
+++ b/LeetCode/450. Delete Node in a BST.md
@@ -9,7 +9,7 @@ If the node is found, delete the node.
  
 
 **Example 1:**
-![img_9.png](img_9.png)
+![img_9.png](../Images/img_9.png)
 ```
 Input: root = [5,3,6,2,4,null,7], key = 3
 Output: [5,4,6,2,null,null,7]
@@ -18,7 +18,7 @@ One valid answer is [5,4,6,2,null,null,7], shown in the above BST.
 Please notice that another valid answer is [5,2,6,null,4,null,7] and it's also accepted.
 ```
 **Example 2:**
-![img_10.png](img_10.png)
+![img_10.png](../Images/img_10.png)
 ```
 Input: root = [5,3,6,2,4,null,7], key = 0
 Output: [5,3,6,2,4,null,7]
