--- a/LeetCode/637. Average of Levels in Binary Tree.md
+++ b/LeetCode/637. Average of Levels in Binary Tree.md
@@ -4,7 +4,7 @@ Given the `root` of a binary tree, return the average value of the nodes on each
  
 
 **Example 1:**
-![img_1.png](img_1.png)
+![img_1.png](../Images/img_1.png)
 
 Input: root = [3,9,20,null,null,15,7]
 Output: [3.00000,14.50000,11.00000]
@@ -12,7 +12,7 @@ Explanation: The average value of nodes on level 0 is 3, on level 1 is 14.5, and
 Hence return [3, 14.5, 11].
 **Example 2:**
 
-![img_2.png](img_2.png)
+![img_2.png](../Images/img_2.png)
 
 Input: root = [3,9,20,15,7]
 Output: [3.00000,14.50000,11.00000]
