--- a/LeetCode/690. Employee Importance.md
+++ b/LeetCode/690. Employee Importance.md
@@ -12,7 +12,7 @@ Given an integer `id` that represents an employee's ID, return *the **total** im
  
 
 **Example 1:**
-![img_31.png](img_31.png)
+![img_31.png](../Images/img_31.png)
 ```
 Input: employees = [[1,5,[2,3]],[2,3,[]],[3,3,[]]], id = 1
 Output: 11
@@ -22,7 +22,7 @@ Thus, the total importance value of employee 1 is 5 + 3 + 3 = 11.
 ```
 
 **Example 2:**
-![img_32.png](img_32.png)
+![img_32.png](../Images/img_32.png)
 ```
 Input: employees = [[1,2,[5]],[5,-3,[]]], id = 5
 Output: -3
