--- a/LeetCode/82. Remove Duplicates from Sorted List II.md
+++ b/LeetCode/82. Remove Duplicates from Sorted List II.md
@@ -6,14 +6,14 @@ Given the `head` of a sorted linked list, *delete all nodes that have duplicate 
  
 
 **Example 1:**
-![img_12.png](img_12.png)
+![img_12.png](../Images/img_12.png)
 
 ```
 Input: head = [1,2,3,3,4,4,5]
 Output: [1,2,5]
 ```
 **Example 2:**
-![img_13.png](img_13.png)
+![img_13.png](../Images/img_13.png)
 ```
 Input: head = [1,1,1,2,3]
 Output: [2,3]
