--- a/LeetCode/117. Populating Next Right Pointers in Each Node II.md
+++ b/LeetCode/117. Populating Next Right Pointers in Each Node II.md
@@ -17,7 +17,7 @@ Initially, all next pointers are set to `NULL`.
  
 
 **Example 1:**
-![img_19.png](img_19.png)
+![img_19.png](../Images/img_19.png)
 
 Input: root = [1,2,3,4,5,null,7]
 Output: [1,#,2,3,#,4,5,7,#]
