--- a/LeetCode/129. Sum Root to Leaf Numbers.md
+++ b/LeetCode/129. Sum Root to Leaf Numbers.md
@@ -13,7 +13,7 @@ A **leaf** node is a node with no children.
  
 
 **Example 1:**
-![img_17.png](img_17.png)
+![img_17.png](../Images/img_17.png)
 
 ```
 Input: root = [1,2,3]
@@ -24,7 +24,7 @@ The root-to-leaf path 1->3 represents the number 13.
 Therefore, sum = 12 + 13 = 25.
 ```
 **Example 2:**
-![img_18.png](img_18.png)
+![img_18.png](../Images/img_18.png)
 ```
 Input: root = [4,9,0,5,1]
 Output: 1026
