--- a/LeetCode/2095. Delete the Middle Node of a Linked List.md
+++ b/LeetCode/2095. Delete the Middle Node of a Linked List.md
@@ -9,7 +9,7 @@ For `n` = `1`, `2`, `3`, `4`, and `5`, the middle nodes are `0`, `1`, `1`, `2`, 
 
 **Example 1:**
 
-![img_3.png](img_3.png)
+![img_3.png](../Images/img_3.png)
 
 Input: head = [1,3,4,7,1,2,6]
 Output: [1,3,4,1,2,6]
@@ -19,7 +19,7 @@ Since n = 7, node 3 with value 7 is the middle node, which is marked in red.
 We return the new list after removing this node. 
 **Example 2:**
 
-![img_4.png](img_4.png)
+![img_4.png](../Images/img_4.png)
 
 Input: head = [1,2,3,4]
 Output: [1,2,4]
@@ -28,7 +28,7 @@ The above figure represents the given linked list.
 For n = 4, node 2 with value 3 is the middle node, which is marked in red.
 **Example 3:**
 
-![img_5.png](img_5.png)
+![img_5.png](../Images/img_5.png)
 
 Input: head = [2,1]
 Output: [2]
