--- a/LeetCode/2583. Kth Largest Sum in a Binary Tree.md
+++ b/LeetCode/2583. Kth Largest Sum in a Binary Tree.md
@@ -10,7 +10,7 @@ Return the `k^th` ***largest** level sum in the tree (not necessarily distinct)*
 
 
 **Example 1:**
-![img_33.png](img_33.png)
+![img_33.png](../Images/img_33.png)
 
 ```
 Input: root = [5,8,9,2,1,3,7,4,6], k = 2
@@ -25,7 +25,7 @@ The 2nd largest level sum is 13.
 
 **Example 2:**
 
-![img_34.png](img_34.png)
+![img_34.png](../Images/img_34.png)
 ```
 Input: root = [1,2,null,3], k = 1
 Output: 3
