--- a/LeetCode/328. Odd Even Linked List.md
+++ b/LeetCode/328. Odd Even Linked List.md
@@ -11,14 +11,14 @@ You must solve the problem in `O(1)` extra space complexity and `O(n)` time comp
  
 
 **Example 1:**
-![img_6.png](img_6.png)
+![img_6.png](../Images/img_6.png)
 ```
 Input: head = [1,2,3,4,5]
 Output: [1,3,5,2,4]
 ```
 
 **Example 2:**
-![img_7.png](img_7.png)
+![img_7.png](../Images/img_7.png)
 ```
 Input: head = [2,1,3,5,6,4,7]
 Output: [2,3,6,7,1,5,4]
