--- a/LeetCode/404. Sum of Left Leaves.md
+++ b/LeetCode/404. Sum of Left Leaves.md
@@ -8,7 +8,7 @@ A **leaf** is a node with no children. A **left leaf** is a leaf that is the lef
 
 **Example 1:**
 
-![img.png](img.png)
+![img.png](../Images/img.png)
 
 ```
 Input: root = [3,9,20,null,null,15,7]
