--- a/LeetCode/513. Find Bottom Left Tree Value.md
+++ b/LeetCode/513. Find Bottom Left Tree Value.md
@@ -3,14 +3,14 @@
 Given the `root` of a binary tree, return the leftmost value in the last row of the tree.
 
 **Example 1:**
-![img_29.png](img_29.png)
+![img_29.png](../Images/img_29.png)
 
 **Input:** `root = [2,1,3]`
 **Output:** `1`
 
 
 **Example 2:**
-![img_30.png](img_30.png)
+![img_30.png](../Images/img_30.png)
 
 **Input:** `root = [1,2,3,4,null,5,6,null,null,7]`
 **Output:** `7`
