--- a/LeetCode/54. Spiral Matrix.md
+++ b/LeetCode/54. Spiral Matrix.md
@@ -4,7 +4,7 @@ Given an `m x n` `matrix`, return all elements of the `matrix` in *spiral order*
 
 **Example 1:**
 
-![img_22.png](img_22.png)
+![img_22.png](../Images/img_22.png)
 ```
 Input: matrix = [[1,2,3],[4,5,6],[7,8,9]]
 Output: [1,2,3,6,9,8,7,4,5]
@@ -12,7 +12,7 @@ Output: [1,2,3,6,9,8,7,4,5]
 
 **Example 2:**
 
-![img_23.png](img_23.png)
+![img_23.png](../Images/img_23.png)
 ```
 Input: matrix = [[1,2,3,4],[5,6,7,8],[9,10,11,12]]
 Output: [1,2,3,4,8,12,11,10,9,5,6,7]
