--- a/LeetCode/86. Partition List.md
+++ b/LeetCode/86. Partition List.md
@@ -22,7 +22,7 @@ e.g. `[3,6,5,4,8,1,7,2] target = 4` -> `[3,1,2,6,5,4,8,7]`
 
 
 **Example 1:**
-![img_16.png](img_16.png)
+![img_16.png](../Images/img_16.png)
 
 Input: head = [1,4,3,2,5,2], x = 3
 Output: [1,2,2,4,3,5]
