--- a/LeetCode/92. Reverse Linked List II.md
+++ b/LeetCode/92. Reverse Linked List II.md
@@ -5,7 +5,7 @@ Given the `head` of a singly linked list and two integers `left` and `right` whe
  
 
 **Example 1:**
-![img_11.png](img_11.png)
+![img_11.png](../Images/img_11.png)
 
 ```
 Input: head = [1,2,3,4,5], left = 2, right = 4
