--- a/LeetCode/98. Validate Binary Search Tree.md
+++ b/LeetCode/98. Validate Binary Search Tree.md
@@ -11,7 +11,7 @@ A **valid BST** is defined as follows:
 
 **Example 1:**
 
-![img_24.png](img_24.png)
+![img_24.png](../Images/img_24.png)
 
 ```
 Input: root = [2,1,3]
@@ -20,7 +20,7 @@ Output: true
 
 **Example 2:**
 
-![img_25.png](img_25.png)
+![img_25.png](../Images/img_25.png)
 
 ```
 Input: root = [5,1,4,null,null,3,6]
