--- a/LeetCode/1441-1450/1448. Count Good Nodes in Binary Tree.md
+++ b/LeetCode/1441-1450/1448. Count Good Nodes in Binary Tree.md
@@ -68,3 +68,25 @@ class Solution:
         traverse(root, maxv)
         return  good[0]
 ```
+
+## Solution2
+```python
+# Definition for a binary tree node.
+# class TreeNode:
+#     def __init__(self, val=0, left=None, right=None):
+#         self.val = val
+#         self.left = left
+#         self.right = right
+class Solution:
+    def goodNodes(self, root: TreeNode) -> int:
+        """pure DFS, much faster"""
+        def dfs(node, prev_val):
+            if not node:
+                return 0
+            elif node.val >= prev_val:
+                return 1 + dfs(node.left, node.val) + dfs(node.right, node.val)
+            else:
+                return dfs(node.left, prev_val) + dfs(node.right, prev_val)
+
+        return dfs(root, root.val)
+```
