--- a/LeetCode/91-100/100. SameTree.md
+++ b/LeetCode/91-100/100. SameTree.md
@@ -1,3 +1,42 @@
+# 100. SameTree
+
+Given the roots of two binary trees `p` and `q`, write a function to check if they are the same or not.
+
+Two binary trees are considered the same if they are structurally identical, and the nodes have the same value.
+
+
+**Example 1:**
+
+![img.png](../../Images/100-1.png)
+
+**Input**: p = [1,2,3], q = [1,2,3]  
+**Output**: true  
+
+
+**Example 2:**
+
+![img_1.png](../../Images/100-2.png)
+
+
+>**Input**: p = [1,2], q = [1,null,2]  
+**Output**: false
+
+**Example 3:**
+
+![img_2.png](../../Images/100-3.png)
+
+>**Input**: p = [1,2,1], q = [1,1,2]  
+**Output**: false
+ 
+
+**Constraints:**
+
+* The number of nodes in both trees is in the range `[0, 100]`.
+* `-104 <= Node.val <= 104`
+
+## ## Recursion Unfold: Iterative Approach, PreOrder Traversal
+
+```python
 # Definition for a binary tree node.
 # class TreeNode:
 #     def __init__(self, val=0, left=None, right=None):
@@ -24,8 +63,11 @@ class SolutionStack:
             stack.append((curp.right, curq.right))
             stack.append((curp.left, curq.left))
         return True
+```
 
+## Recursion
 
+```python
 # Definition for a binary tree node.
 # class TreeNode:
 #     def __init__(self, val=0, left=None, right=None):
@@ -47,3 +89,34 @@ class SolutionRecursion:
             return False
         # else they are not None with same values, going deeper on both sides
         return self.isSameTree(p.left, q.left) and self.isSameTree(p.right, q.right)
+```
+
+
+## Recursion Unfold: Iterative Approach, Level Traversal
+
+```python
+# Definition for a binary tree node.
+# class TreeNode:
+#     def __init__(self, val=0, left=None, right=None):
+#         self.val = val
+#         self.left = left
+#         self.right = right
+class Solution:
+    def isSameTree(self, p: Optional[TreeNode], q: Optional[TreeNode]) -> bool:
+        dq = collections.deque([(p, q),])
+        while dq:
+            p, q = dq.popleft()
+            # both reached the end at the same time
+            if not p and not q:
+                continue
+            # on reached the end, the other did not
+            if not p or not q:
+                return False
+            # different values
+            if p.val != q.val:
+                return False
+            # same value, keep going
+            dq.append((p.left, q.left))
+            dq.append((p.right, q.right))
+        return True
+```
