746 md added with new solution details.

--- a/LeetCode/741-750/746. Min Cost Climbing Stairs.md
+++ b/LeetCode/741-750/746. Min Cost Climbing Stairs.md
@@ -7,7 +7,6 @@ You can either start from the step with index `0`, or the step with index `1`.
 
 Return the *minimum cost to reach the top of the floor*.
 
- 
 
 **Example 1:**
 
@@ -37,20 +36,43 @@ The total cost is 6.
 * `2 <= cost.length <= 1000`
 * `0 <= cost[i] <= 999`
 
-## DP
+## DP-Top Down: Recursion + Memoization
+1. **State**: (step)idx we are at
+2. **Recrusion Relation**:
+   * take one step to reach i: dp[i-1] + cost[i-1]
+   * take two steps to reach i: dp[i-2] + cost[i-2] 
+3. **Base Case**:
+   * dp[0], dp[1] = 0, 0, start with no cost
 
 ```python
 class Solution:
     def minCostClimbingStairs(self, cost: List[int]) -> int:
-        # DP
-        # dp[i] stores minimum cost to reach i step, i is the TOP for each round
-        dp = [0] * (len(cost) + 1)
-        # starts at index 2
-        # recurrence relation: dp[i] = min(cost[i-2] + dp[i-2], cost[i-1] + dp[i-1])
-        for i in range(2, len(cost) + 1):
-            take_one_step = dp[i-1] + cost[i-1]
-            take_two_steps = dp[i-2] + cost[i-2]
-            dp[i] = min(take_one_step, take_two_steps)
-        # final level is the TOP level, dp[top] is the minimum cost of reaching TOP
+        # Top Down: Recursion + Memoization
+        # stores the minimum cost to reach idx
+        memo = {}
+        def dp(idx):
+            if idx <= 1:
+                return 0
+            # take one step or take two steps to reach current idx
+            if idx not in memo:
+                memo[idx] = min(dp(idx-1)+cost[idx-1], dp(idx-2)+cost[idx-2])
+            return memo[idx]
+        # to the top floor, one step further
+        return dp(len(cost))
+```
+
+
+## DP-Bottom Up: Iteration + Array
+
+```python
+class Solution:
+    def minCostClimbingStairs(self, cost: List[int]) -> int:
+        n = len(cost)
+        # reach the top, 1 step further
+        dp = [0] * (n + 1)
+        for i in range(2, n + 1):
+            one_step = dp[i-1] + cost[i-1]
+            two_steps = dp[i-2] + cost[i-2]
+            dp[i] = min(one_step, two_steps)
         return dp[-1]
 ```
