740 md added with new solution.

--- a/LeetCode/731-740/740. Delete and Earn.md
+++ b/LeetCode/731-740/740. Delete and Earn.md
@@ -32,7 +32,6 @@ You earn a total of 9 points.
 * `1 <= nums[i] <= 104`
 
 
-
 ## DP-Top Down: Recursion + Memoization
 
 1. **State:**
@@ -49,8 +48,6 @@ You earn a total of 9 points.
 ```python
 class Solution:
     def deleteAndEarn(self, nums: List[int]) -> int:
-
-
         # once we select any num, we select all of them, we can pre calculate the sum by multiplication
         points = collections.defaultdict(int)
         
@@ -77,4 +74,32 @@ class Solution:
             return memo[num]
         
         return max_points(mx)
+```
+
+## DP-Bottom Up: Iteration + Array
+
+```python
+class Solution:
+    def deleteAndEarn(self, nums: List[int]) -> int:
+        points = collections.defaultdict(int)
+        mx = -1
+        # Precompute how many points we gain from taking an element
+        for num in nums:
+            points[num] += num
+            mx = max(mx, num)
+        
+        # array stores max points from 0 to num
+        # Base Cases: 
+        # for num == 0, max points will always be 0
+        # for num == 1, max points will be sum of 1s
+        # only need to iterate till max number
+        max_points = [0] * (mx + 1)
+        max_points[1] = points[1]
+
+        # from base case to max num, we need each of the num in the range
+        for num in range(2, mx+1):
+            # recursion relation, max(rob, not rob)
+            max_points[num] = max(max_points[num-2] + points[num], max_points[num-1])
+        print(max_points)
+        return max_points[-1]
 ```
