--- a/LeetCode/61-70/62. Unique Paths.md
+++ b/LeetCode/61-70/62. Unique Paths.md
@@ -9,7 +9,7 @@ The test cases are generated so that the answer will be less than or equal to `2
 
 **Example 1:**
 
-![img.png](62-1.png)
+![img.png](../../Images/62-1.png)
 
 >**Input**: m = 3, n = 7  
 **Output**: 28  
