33 md updated with solution.

--- a/LeetCode/31-40/33. Search in Rotated Sorted Array.md
+++ b/LeetCode/31-40/33. Search in Rotated Sorted Array.md
@@ -37,13 +37,15 @@ You must write an algorithm with `O(log n)` runtime complexity.
 * `-104 <= target <= 104`
 
 
-## Solution
+## Binary Search
 ```python
 class Solution:
     def search(self, nums: List[int], target: int) -> int:
         """
         binary search + two pointers
-        KEY: one of the half is sorted, check the sorted part.
+        LEFT PART SORTED: nums[left] <= nums[mid]
+        RIGHT PART SORTED: nums[left] > nums[mid]
+        then keep binary searching in the LEFT or RIGHT 
         """
         
         l, r = 0, len(nums) - 1
@@ -55,6 +57,7 @@ class Solution:
                 return mid
             
             # check if left part SORTED
+            # must use '=', [3, 1], if there are only 2 elements
             if nums[l] <= nums[mid]:
                 # target is in the left SORTED part
                 if nums[l] <= target < nums[mid]:
