99 md updated with dfs solution.

--- a/LeetCode/91-100/99. Recover Binary Search Tree.md
+++ b/LeetCode/91-100/99. Recover Binary Search Tree.md
@@ -73,5 +73,49 @@ class Solution:
         x.val, y.val = y.val, x.val
 ```
 
+
 ## Recursive Inorder Traversal(DFS)
-TODO
+
+```python
+# Definition for a binary tree node.
+# class TreeNode:
+#     def __init__(self, val=0, left=None, right=None):
+#         self.val = val
+#         self.left = left
+#         self.right = right
+class Solution:
+
+    def recoverTree(self, root: Optional[TreeNode]) -> None:
+        """
+        Do not return anything, modify root in-place instead.
+        """
+        # recursive inorder traversal
+        def dfs(root):
+            # KEY: used in nested functions, nonlocal indicates variable in closest(nearest one) outer scope
+            nonlocal x, y, prev
+            if not root:
+                return
+            
+            # keep going left
+            dfs(root.left)
+
+            # return from left, current node out of order
+            # store current root for later swap
+            if prev and root.val < prev.val:
+                y = root
+                # KEY: if x is None, root is the first occurrence out of order
+                if not x:
+                    x = prev
+                # KEY: if we get x, current root is the second occurrence out of order, we get both nodes, return and swap
+                else:
+                    return 
+
+            # current node is the latest inorder node, update it as prev
+            prev = root
+            # go right
+            dfs(root.right)
+        
+        x = y = prev = None
+        dfs(root)
+        x.val, y.val = y.val, x.val
+```
