146 md updated with python&java solutions.

--- a/LeetCode/141-150/146. LRU Cache.md
+++ b/LeetCode/141-150/146. LRU Cache.md
@@ -36,3 +36,162 @@ lRUCache.get(4);    // return 4
 * `0 <= key <= 104`
 * `0 <= value <= 105`
 * At most `2 * 10^5` calls will be made to get and put.
+
+
+## Python
+
+```python
+class Node:
+    def __init__(self, key, val):
+        self.key = key
+        self.val = val
+        self.prev = None
+        self.next = None
+
+
+class LRUCache:
+
+    def __init__(self, capacity: int):
+        # doubly linkedlist
+        self.capacity = capacity
+        self.head = Node(-1, -1)            # dummy head
+        self.tail = Node(-1, -1)            # dummy tail
+        self.head.next = self.tail
+        self.tail.prev = self.head          # dummy_head <-> dummy_tail
+        self.dic = {}                       # {key: node}, empty at initiation
+
+    def add(self, node):
+        # helper method: add a new node to the end of doubly linkedlist
+        tail = self.tail.prev
+        tail.next = node        
+        node.prev = tail
+        node.next = self.tail
+        self.tail.prev = node 
+
+    def remove(self, node):
+        # helper method: delete the node from the doubly linkedlist
+        node.prev.next = node.next
+        node.next.prev = node.prev
+
+    def get(self, key: int) -> int:
+        if key not in self.dic:
+            return -1
+        # update the key related node to the end of list(most recently used)
+        node = self.dic[key]
+        self.remove(node)
+        self.add(node)
+
+        # use hash map to return value in O(1) time
+        return node.val
+
+    def put(self, key: int, value: int) -> None:
+        # add new k-v, update if exists, also put the related node to the end of list
+        if key in self.dic:
+            node = self.dic[key]
+            self.remove(node)       # remove node from the linkedlist
+        
+        # nomatter what capacity for now, we have to add the new node
+        new_node = Node(key, value)
+        self.dic[key] = new_node    # add/update new k-node to hashmap
+        self.add(new_node)
+
+        # check capacity, remove if out of bound
+        if len(self.dic) > self.capacity:
+            delete_node = self.head.next    # careful here, after remove, self.head.next changed, so save the node first
+            self.remove(self.head.next)     # remove the LRU node
+            del self.dic[delete_node.key]
+
+
+# Your LRUCache object will be instantiated and called as such:
+# obj = LRUCache(capacity)
+# param_1 = obj.get(key)
+# obj.put(key,value)
+```
+
+
+
+## Java
+
+```java
+
+class ListNode {
+
+    int key;
+    int val;
+    ListNode prev;
+    ListNode next;
+
+    public ListNode(int key, int val){
+        this.key = key;
+        this.val = val;
+    }
+}
+
+class LRUCache {
+
+    int capacity;
+    Map<Integer, ListNode> dic;
+    ListNode head;
+    ListNode tail;
+
+    public LRUCache(int capacity) {
+        this.capacity = capacity;
+        this.dic = new HashMap<>();
+        this.head = new ListNode(-1, -1);
+        this.tail = new ListNode(-1, -1);
+        this.head.next = this.tail;
+        this.tail.prev = this.head;
+    }
+
+    /**helper method, append new node to the end of LinkedList */
+    private void add(ListNode node) {
+        ListNode realEnd = this.tail.prev;
+        realEnd.next = node;
+        node.prev = realEnd;
+        node.next = this.tail;
+        this.tail.prev = node;
+    }
+
+    /**helper method, remove node from LinkedList */
+    private void remove(ListNode node){
+        node.prev.next = node.next;
+        node.next.prev = node.prev;
+    }
+    
+    public int get(int key) {
+        if (!dic.containsKey(key)){
+            return -1;
+        }
+
+        ListNode node = dic.get(key);
+        remove(node);
+        add(node);
+        return node.val;
+    }
+    
+    public void put(int key, int value) {
+        if (dic.containsKey(key)){              // remove and add --> update
+            ListNode oldNode = this.dic.get(key);
+            remove(oldNode);
+        }
+        
+        ListNode newNode = new ListNode(key, value);
+        this.dic.put(key, newNode);
+        this.add(newNode);
+
+        
+        if (this.dic.size() > this.capacity){   // check size after adding
+            ListNode deleteNode = this.head.next;
+            remove(deleteNode);                 // remove LRU node from the LinkedList
+            this.dic.remove(deleteNode.key);    // remove LRU key from the dic
+        }
+    }
+}
+
+/**
+ * Your LRUCache object will be instantiated and called as such:
+ * LRUCache obj = new LRUCache(capacity);
+ * int param_1 = obj.get(key);
+ * obj.put(key,value);
+ */
+```
