--- a/LeetCode/781-790/797. All Paths From Source to Target.md
+++ b/LeetCode/781-790/797. All Paths From Source to Target.md
@@ -33,25 +33,31 @@ Output: [[0,4],[0,3,4],[0,1,3,4],[0,1,2,3,4],[0,1,4]]
 * The input graph is **guaranteed** to be a **DAG**.
 
 
+## DFS: Recursive + Backtracking
+
 ```python
 class Solution:
     def allPathsSourceTarget(self, graph: List[List[int]]) -> List[List[int]]:
-        # DFS: Recursive
+        # DFS: Recursive + Backtracking
         # KEY: get all possible paths, no need to check visited
-        n = len(graph)
-        res = []
+        def dfs(curr):
+            # add current node to path
+            path.append(curr)
 
-        def dfs(curr, path, target):
             # base case: target found, save current path
-            if curr == target:
-                res.append(path)
+            if curr == len(graph) - 1:
+                res.append(path.copy())
                 return
             
             # go through all connected nodes
             for nxt in graph[curr]:
                 # path + curr is a new copy
-                dfs(nxt, path + [nxt], target)
-        
-        dfs(0, [0], n - 1)
+                dfs(nxt)
+                # KEY: when return from previous level, delete the previous result from path
+                path.pop()
+        path = []
+        res = []
+        dfs(0)
         return res
 ```
+
