951 created with solutions, relocate all image files

--- a/LeetCode/1001-1010/1008. Construct Binary Search Tree from Preorder Traversal.md
+++ b/LeetCode/1001-1010/1008. Construct Binary Search Tree from Preorder Traversal.md
@@ -13,7 +13,7 @@ A **preorder traversal** of a binary tree displays the value of the node first, 
 
 **Example 1:**
 
-![img.png](../Images/1008-1.png)
+![img.png](../../Images/1008-1.png)
 
 >Input: preorder = [8,5,1,7,10,12]  
 Output: [8,5,10,1,7,null,12]  
