--- a/LeetCode/2261-2270/2265. Count Nodes Equal to Average of Subtree.md
+++ b/LeetCode/2261-2270/2265. Count Nodes Equal to Average of Subtree.md
@@ -10,7 +10,7 @@ Note:
 
 **Example 1:**
 
-![img.png](../Images/2265-1.png)
+![img.png](../../Images/2265-1.png)
 
 >**Input**: root = [4,8,5,0,1,null,6]  
 **Output**: 5  
@@ -24,7 +24,7 @@ For the node with value 6: The average of its subtree is 6 / 1 = 6.
 
 **Example 2:**
 
-![img_1.png](../Images/2265-2.png)
+![img_1.png](../../Images/2265-2.png)
 
 >**Input**: root = [1]  
 **Output**: 1  
