--- a/LeetCode/2481-2490/2385. Amount of Time for Binary Tree to Be Infected.md
+++ b/LeetCode/2481-2490/2385. Amount of Time for Binary Tree to Be Infected.md
@@ -13,7 +13,7 @@ Return *the number of minutes needed for the entire tree to be infected.*
 
 **Example 1:**
 
-![img.png](../Images/2385-1.png)
+![img.png](../../Images/2385-1.png)
 
 >Input: root = [1,5,3,null,4,10,6,9,2], start = 3  
 Output: 4  
@@ -28,7 +28,7 @@ Explanation: The following nodes are infected during:
 
 **Example 2:**
 
-![img_1.png](../Images/2385-2.png)
+![img_1.png](../../Images/2385-2.png)
 
 >Input: root = [1], start = 1  
 Output: 0  
