--- a/LeetCode/541-550/547. Number of Provinces.md
+++ b/LeetCode/541-550/547. Number of Provinces.md
@@ -12,14 +12,14 @@ Return *the total number of **provinces**.*
 
 **Example 1:**
 
-![img.png](../Images/547-1.png)
+![img.png](../../Images/547-1.png)
 
 >Input: isConnected = [[1,1,0],[1,1,0],[0,0,1]]  
 Output: 2  
 
 **Example 2:**
 
-![img_1.png](../Images/547-2.png)
+![img_1.png](../../Images/547-2.png)
 
 >Input: isConnected = [[1,0,0],[0,1,0],[0,0,1]]  
 Output: 3  
