--- a/LeetCode/1101-1110/1110. Delete Nodes And Return Forest.md
+++ b/LeetCode/1101-1110/1110. Delete Nodes And Return Forest.md
@@ -10,7 +10,7 @@ Return the roots of the trees in the remaining forest. You may return the result
 
 **Example 1:**
 
-![img.png](../Images/1110-1.png)
+![img.png](../../Images/1110-1.png)
 
 >**Input**: root = [1,2,3,4,5,6,7], to_delete = [3,5]  
 **Output**: [[1,2,null,4],[6],[7]]  
