--- a/LeetCode/1361-1370/1361. Validate Binary Tree Nodes.md
+++ b/LeetCode/1361-1370/1361. Validate Binary Tree Nodes.md
@@ -10,14 +10,14 @@ Note that the nodes have no values and that we only use the node numbers in this
 
 **Example 1:**
 
-![img.png](../Images/1361-1.png)
+![img.png](../../Images/1361-1.png)
 
 >Input: n = 4, leftChild = [1,-1,3,-1], rightChild = [2,-1,-1,-1]  
 Output: true  
 
 **Example 2:**
 
-![img.png](../Images/1361-2.png)
+![img.png](../../Images/1361-2.png)
 
 >Input: n = 4, leftChild = [1,-1,3,-1], rightChild = [2,3,-1,-1]  
 Output: false  
@@ -25,7 +25,7 @@ Output: false
 
 **Example 3:**
 
-![img.png](../Images/1361-3.png)
+![img.png](../../Images/1361-3.png)
 
 >Input: n = 2, leftChild = [1,0], rightChild = [-1,-1]  
 Output: false  
