--- a/LeetCode/1971-1980/1971. Find if Path Exists in Graph.md
+++ b/LeetCode/1971-1980/1971. Find if Path Exists in Graph.md
@@ -11,7 +11,7 @@ Given `edges` and the integers `n`, `source`, and `destination`, return *`true` 
 
 **Example 1:**
 
-![img.png](../Images/1971-1.png)
+![img.png](../../Images/1971-1.png)
 
 >Input: n = 3, edges = [[0,1],[1,2],[2,0]], source = 0, destination = 2  
 Output: true  
@@ -22,7 +22,7 @@ Explanation: There are two paths from vertex 0 to vertex 2:
 
 **Example 2:**
 
-![img_1.png](../Images/1971-2.png)
+![img_1.png](../../Images/1971-2.png)
 
 
 >Input: n = 6, edges = [[0,1],[0,2],[3,5],[5,4],[4,3]], source = 0, destination = 5  
