--- a/LeetCode/571-580/576. Out of Boundary Paths.md
+++ b/LeetCode/571-580/576. Out of Boundary Paths.md
@@ -9,7 +9,7 @@ Given the five integers `m`, `n`, `maxMove`, `startRow`, `startColumn`, return t
 
 **Example 1:**
 
-![img.png](../Images/576-1.png)
+![img.png](../../Images/576-1.png)
 
 >**Input**: m = 2, n = 2, maxMove = 2, startRow = 0, startColumn = 0  
 **Output**: 6  
@@ -17,7 +17,7 @@ Given the five integers `m`, `n`, `maxMove`, `startRow`, `startColumn`, return t
 
 **Example 2:**
 
-![img.png](../Images/576-2.png)
+![img.png](../../Images/576-2.png)
 
 >**Input**: m = 1, n = 3, maxMove = 3, startRow = 0, startColumn = 1  
 **Output**: 12  
