--- a/LeetCode/651-660/652. Find Duplicate Subtrees.md
+++ b/LeetCode/651-660/652. Find Duplicate Subtrees.md
@@ -10,7 +10,7 @@ Two trees are **duplicate** if they have the **same structure** with the **same 
 
 **Example 1:**
 
-![img.png](../Images/652-1.png)
+![img.png](../../Images/652-1.png)
 
 
 >**Input**: root = [1,2,3,4,null,2,4,null,null,4]  
@@ -19,7 +19,7 @@ Two trees are **duplicate** if they have the **same structure** with the **same 
 
 **Example 2:**
 
-![img_1.png](../Images/652-2.png)
+![img_1.png](../../Images/652-2.png)
 
 
 >**Input**: root = [2,1,1]  
@@ -28,7 +28,7 @@ Two trees are **duplicate** if they have the **same structure** with the **same 
 
 **Example 3:**
 
-![img_2.png](../Images/652-3.png)
+![img_2.png](../../Images/652-3.png)
 
 >**Input**: root = [2,2,2,3,null,3,null]  
 **Output**: [[2,3],[3]] 
