--- a/LeetCode/701-710/701. Insert into a Binary Search Tree.md
+++ b/LeetCode/701-710/701. Insert into a Binary Search Tree.md
@@ -8,13 +8,13 @@ Notice that there may exist multiple valid ways for the insertion, as long as th
 
 **Example 1:**
 
-![img.png](../Images/701-1.png)
+![img.png](../../Images/701-1.png)
 
 Input: root = [4,2,7,1,3], val = 5
 Output: [4,2,7,1,3,5]
 Explanation: Another accepted tree is:
 
-![img_1.png](../Images/701-2.png)
+![img_1.png](../../Images/701-2.png)
 
 **Example 2:**
 
