--- a/LeetCode/771-780/776. Split BST.md
+++ b/LeetCode/771-780/776. Split BST.md
@@ -10,7 +10,7 @@ Return *an array of the two roots of the two subtrees.*
 
 **Example 1:**
 
-![img.png](../Images/776-1.png)
+![img.png](../../Images/776-1.png)
 
 
 >**Input**: root = [4,2,6,1,3,5,7], target = 2  
