--- a/LeetCode/781-790/797. All Paths From Source to Target.md
+++ b/LeetCode/781-790/797. All Paths From Source to Target.md
@@ -8,7 +8,7 @@ The graph is given as follows: `graph[i]` is a list of all nodes you can visit f
 
 **Example 1:**
 
-![img.png](../Images/797-1.png)
+![img.png](../../Images/797-1.png)
 
 >Input: graph = [[1,2],[3],[3],[]]  
 Output: [[0,1,3],[0,2,3]]  
@@ -17,7 +17,7 @@ Explanation: There are two paths: 0 -> 1 -> 3 and 0 -> 2 -> 3.
 
 **Example 2:**
 
-![img_1.png](../Images/797-2.png)
+![img_1.png](../../Images/797-2.png)
 
 >Input: graph = [[4,3,1],[3,2,4],[3],[4],[]]  
 Output: [[0,4],[0,3,4],[0,1,3,4],[0,1,2,3,4],[0,1,4]]  
