--- a/LeetCode/891-900/894. All Possible Full Binary Trees.md
+++ b/LeetCode/891-900/894. All Possible Full Binary Trees.md
@@ -10,7 +10,7 @@ A **full binary tree** is a binary tree where each node has exactly 0 or 2 child
 
 **Example 1:**
 
-![img.png](../Images/894-1.png)
+![img.png](../../Images/894-1.png)
 
 >**Input**: n = 7  
 **Output**: [[0,0,0,null,null,0,0,null,null,0,0],[0,0,0,null,null,0,0,0,0],[0,0,0,0,0,0,0],[0,0,0,0,0,null,null,null,null,0,0],[0,0,0,0,0,null,null,0,0]]  
