--- a/LeetCode/931-940/931. Minimum Falling Path Sum.md
+++ b/LeetCode/931-940/931. Minimum Falling Path Sum.md
@@ -6,14 +6,14 @@ A **falling path** starts at any element in the first row and chooses the elemen
 
 
 **Example 1:**
-![img.png](../Images/931-1.png)
+![img.png](../../Images/931-1.png)
 
 >Input: matrix = [[2,1,3],[6,5,4],[7,8,9]]  
 Output: 13  
 Explanation: There are two falling paths with a minimum sum as shown.  
 
 **Example 2:**
-![img_1.png](../Images/931-2.png)
+![img_1.png](../../Images/931-2.png)
 
 >Input: matrix = [[-19,57],[-40,-5]]  
 Output: -59  
