77 backtracking template updated

--- a/LeetCode/71-80/77. Combinations.md
+++ b/LeetCode/71-80/77. Combinations.md
@@ -27,6 +27,18 @@ Note that combinations are unordered, i.e., [1,2] and [2,1] are considered to be
 * `1 <= k <= n`
 
 ## BackTracking
+
+**Backtracking Template:**
+
+```text
+for element in the subset of current level:  
+    handle current node (add to path, etc)
+    backtracking(path, next_subset)
+    remove previous result(pop from path, etc)
+```
+
+
+
 ```python
 class Solution:
     """BackTracking"""
