--- a/LeetCode/71-80/77. Combinations.md
+++ b/LeetCode/71-80/77. Combinations.md
@@ -71,3 +71,39 @@ class Solution:
         return res
 ```
 
+## C++
+
+```cpp
+class Solution {
+/*
+backtracking template
+for element in subset of current level:
+    handle the element(add)
+    backtracking(path, new_subset)
+    remove previous result(pop)
+*/
+vector<vector<int>> result;
+vector<int> path;
+
+private:
+    void backtracking(int n, int k, int startIndex){
+        // base case: path filled
+        if (path.size() == k){
+            result.push_back(path);     // pass by value, not referrence
+            return;
+        }
+        for (int i = startIndex; i < n + 1; i++){
+            path.push_back(i);          // handle current num, add to path
+            backtracking(n, k,  i + 1);  // move to the next num
+            path.pop_back();            // remove the previous num
+        }
+    }
+
+
+public:
+    vector<vector<int>> combine(int n, int k) {
+        backtracking(n, k, 1);  // start from num 1
+        return result;
+    }
+};
+```
