--- a/LeetCode/201-210/210. Course Schedule II.md
+++ b/LeetCode/201-210/210. Course Schedule II.md
@@ -1,11 +1,110 @@
 # 210. Course Schedule II
 
+There are a total of `numCourses` courses you have to take, labeled from `0` to `numCourses - 1`. You are given an array prerequisites where `prerequisites[i] = [ai, bi]` indicates that you must take course `b_i` first if you want to take course `a_i`.
 
+* For example, the pair `[0, 1]`, indicates that to take course 0 you have to first take course `1`.
+Return *the ordering of courses you should take to finish all courses*. If there are many valid answers, return any of them. If it is impossible to finish all courses, return **an empty array**.
+
+
+
+**Example 1:**
+
+>Input: numCourses = 2, prerequisites = [[1,0]]  
+Output: [0,1]  
+Explanation: There are a total of 2 courses to take. To take course 1 you should have finished course 0. So the correct course order is [0,1].  
+
+**Example 2:**
+
+>Input: numCourses = 4, prerequisites = [[1,0],[2,0],[3,1],[3,2]]  
+Output: [0,2,1,3]  
+Explanation: There are a total of 4 courses to take. To take course 3 you should have finished both courses 1 and 2. Both courses 1 and 2 should be taken after you finished course 0.  
+So one correct course order is [0,1,2,3]. Another correct ordering is [0,2,1,3].  
+
+
+**Example 3:**
+
+>Input: numCourses = 1, prerequisites = []  
+Output: [0]  
+ 
+
+**Constraints:**
+
+* `1 <= numCourses <= 2000`
+* `0 <= prerequisites.length <= numCourses * (numCourses - 1)`
+* `prerequisites[i].length == 2`
+* `0 <= ai, bi < numCourses`
+* `ai != bi`
+* All the pairs `[ai, bi]` are distinct.
+
+
+## Pattern
+1. create adjacency list based on pair related nodes[node1, node2],[node1, node3], ...
+2. create indegree, count incoming edges for each of the nodes
+3. create Queue, add all nodes with NO incoming edges into the queue
+4. while loop, BFS, go through all nodes
+5. see if result length == numNodes, return result.
+
+
+## BFS(Java)
 
 ```java
+class Solution {
+    public int[] findOrder(int numCourses, int[][] prerequisites) {
+        // 1. create indegree for incoming edges
+        int[] indegree = new int[numCourses];
 
+        // 2. create adjacency list
+        Map<Integer, List<Integer>> adjList = new HashMap<Integer, List<Integer>>();
+        
+        for (int i = 0; i < prerequisites.length; i++) {
+            int dest = prerequisites[i][0];     // if you want to take dest(course)
+            int src = prerequisites[i][1];      // must take src(prerequisite) first
+            
+            // src(prerequisite) i: [dest1(course1), dest2(course2), ...] outgoing edges from src
+            List<Integer> lst = adjList.getOrDefault(src, new ArrayList<Integer>());
+            lst.add(dest);
+            adjList.put(src, lst);
+            // degree(incoming edges) for dest +1
+            indegree[dest] += 1;
+        }
+
+        // put all node with no incoming edges to queue(indegree 0)
+        Queue<Integer> q = new LinkedList<Integer>();
+        for (int i = 0; i < numCourses; i++) {
+            if (indegree[i] == 0){
+                q.add(i);
+            }
+        }
+        
+        int i = 0;
+        int[] order = new int[numCourses];
+        while (!q.isEmpty()){
+            int node = q.remove();
+            // course taken, add to order list
+            order[i] = node;
+            i++;
+
+            // indegree of current node neighbours -1
+            if (adjList.containsKey(node)){
+                for (Integer ne : adjList.get(node)){
+                    indegree[ne]--;
+
+                    if (indegree[ne] == 0){
+                        q.add(ne);
+                    }
+                }
+            }   
+        }
+        if (i == numCourses){
+            return order;          
+        }
+        return new int[0];
+    }
+}
 ```
 
+
+## BFS(Python)
 
 ```python
 class Solution:
@@ -37,5 +136,3 @@ class Solution:
                     queue.append(pre)
         return [] if len(order) != numCourses else order
 ```
-
-
