--- a/LeetCode/201-210/207. Course Schedule.md
+++ b/LeetCode/201-210/207. Course Schedule.md
@@ -1,8 +1,91 @@
 # 207. Course Schedule
 
+There are a total of `numCourses` courses you have to take, labeled from `0` to `numCourses - 1`. You are given an array prerequisites where p`rerequisites[i] = [ai, bi]` indicates that you must take course `b_i` first if you want to take course `a_i`.
+
+* For example, the pair `[0, 1]`, indicates that to take course `0` you have to first take course `1`.
+Return `true` if you can finish all courses. Otherwise, return `false`.
+
+ 
+
+**Example 1:**
+
+>Input: numCourses = 2, prerequisites = [[1,0]]  
+Output: true  
+Explanation: There are a total of 2 courses to take.   
+To take course 1 you should have finished course 0. So it is possible.  
+
+**Example 2:**
+
+>Input: numCourses = 2, prerequisites = [[1,0],[0,1]]  
+Output: false  
+Explanation: There are a total of 2 courses to take.   
+To take course 1 you should have finished course 0, and to take course 0 you should also have finished course 1. So it is impossible.  
+ 
+
+**Constraints:**
+
+* `1 <= numCourses <= 2000`
+* `0 <= prerequisites.length <= 5000`
+* `prerequisites[i].length == 2`
+* `0 <= ai, bi < numCourses`
+* All the pairs `prerequisites[i]` are unique.
+
+## Pattern
+1. create **adjacency list**
+2. create **indegree** to save incoming edges
+3. put all nodes into adjacency list, src(pre): [dest1(course1), dest2(course2)...]
+4. create **queue** for **BFS**
+5. put all nodes with **NO incoming edges**(`indegree==0`) into queue
+6. while loop, check result length == numCourses and return
+
 
 ```java
+class Solution {
+    public boolean canFinish(int numCourses, int[][] prerequisites) {
+        // 1. create adj list
+        Map<Integer, ArrayList<Integer>> adj = new HashMap<>();
+    
+        // 2. create indegree to save incoming edges
+        int[] indegree = new int[numCourses];
 
+        // 3. put all nodes into adjacency list, src(pre): [dest1(course1), dest2(course2)...]
+        // after I take src, I can take dest1, dest2...
+        for (int[] pre : prerequisites){
+            // key might not exist, create default value
+            if (!adj.containsKey(pre[1])){
+                adj.put(pre[1], new ArrayList<>()); 
+            }
+            adj.get(pre[1]).add(pre[0]);
+            indegree[pre[0]]++;     // incoming edges +1
+        }
+        // 4. create queue for BFS
+        Queue<Integer> queue = new LinkedList<>();
+
+        // 5. put all nodes with no incoming edges(indegree==0) into queue
+        for (int i = 0; i < indegree.length; i++) {
+            if (indegree[i] == 0){
+                queue.offer(i);
+            }
+        }
+
+        // 6. while loop, check result length == numCourses and return
+        int count = 0;
+        while (!queue.isEmpty()){
+            int src = queue.poll();
+            count++;    // take this course
+            // update indegree for all its neighbours, check key existance first
+            if (adj.containsKey(src)){
+                for (int neighbour : adj.get(src)){
+                    indegree[neighbour]--;
+                    if (indegree[neighbour] == 0){
+                        queue.offer(neighbour);
+                    }
+                }
+            }
+        }
+        return count == numCourses;
+    }
+}
 ```
 
 ```python
