2487 updated with new solutions.

--- a/LeetCode/2481-2490/2487. Remove Nodes From Linked List.md
+++ b/LeetCode/2481-2490/2487. Remove Nodes From Linked List.md
@@ -31,7 +31,12 @@ Return *the `head` of the modified linked list*.
 * The number of the nodes in the given list is in the range `[1, 105]`.
 * `1 <= Node.val <= 105`
 
-## Solution
+## Reverse Iteration LinkedList
+
+1. reverse iteration
+2. remove all smaller nodes
+3. reverse back(same func)
+
 ```python
 # Definition for singly-linked list.
 # class ListNode:
@@ -76,4 +81,43 @@ class Solution:
             cur = nxt
         # reverse again
         return reverse(head)
+```
+
+## Stack(Reverse Intuition)
+
+1. Reverse: intuition should be STACK, LIFO.
+2. reconnect and reverse during stack popping, one pass.
+
+
+```python
+# Definition for singly-linked list.
+# class ListNode:
+#     def __init__(self, val=0, next=None):
+#         self.val = val
+#         self.next = next
+class Solution:
+    def removeNodes(self, head: Optional[ListNode]) -> Optional[ListNode]:
+        # stack
+        stack = []
+        curr = head
+        while curr:
+            stack.append(curr)
+            curr = curr.next
+
+        # create a new list by the first node
+        curr = stack.pop()
+        max_val = curr.val
+        new_head = ListNode(curr.val)
+        # pop from stack: iterate reversely, skip smaller, connect bigger
+        while stack:
+            curr = stack.pop()
+            # skip smaller
+            if curr.val < max_val:
+                continue
+            # connect bigger, update max value
+            else:
+                curr.next = new_head
+                new_head = curr
+                max_val = curr.val
+        return new_head
 ```
