--- a/LeetCode/501-510/506. Relative Ranks.md
+++ b/LeetCode/501-510/506. Relative Ranks.md
@@ -10,7 +10,6 @@ The `3rd` place athlete's rank is `"Bronze Medal"`.
 For the `4th` place to the nth place athlete, their rank is their placement number (i.e., the xth place athlete's rank is "x").
 Return an array answer of size `n` where `answer[i]` is the rank of the ith athlete.
 
- 
 
 **Example 1:**
 
@@ -33,7 +32,12 @@ Explanation: The placements are [1st, 5th, 3rd, 2nd, 4th].
 * All the values in score are unique.
 
 
-## Solution
+
+## Pattern
+1. Sorting and Ranking related: see if Heap can be used.
+2. Use negative value to switch from minHeap to maxHeap.
+
+## Heap(Priority Queue)
 
 ```python
 class Solution:
@@ -46,16 +50,16 @@ class Solution:
         # pop biggest element from minHeap and save result to origin idx
         rank = 1
         while heap:
-            _, idx = heapq.heappop(heap)
+            _, original_index = heapq.heappop(heap)
             if rank == 1:
-                res[idx] = "Gold Medal"
+                res[original_index] = "Gold Medal"
             elif rank == 2:
-                res[idx] = "Silver Medal"
+                res[original_index] = "Silver Medal"
             elif rank == 3:
-                res[idx] = "Bronze Medal"
+                res[original_index] = "Bronze Medal"
             else:
                 # the rest are just num of rank
-                res[idx] = str(rank)
+                res[original_index] = str(rank)
             rank += 1
         return res
 ```
