17 updated with solutions.

--- a/LeetCode/11-20/17. Letter Combinations of a Phone Number.md
+++ b/LeetCode/11-20/17. Letter Combinations of a Phone Number.md
@@ -31,6 +31,10 @@ Output: ["a","b","c"]
 
 ## Pattern
 
+* **For Loop** traverse **horizontally**
+* **Recursion** traverse **vertically**(control the number of for loops)
+* **backtracking** continuously adjusts the **result** set.
+
 ```python
 for i in range(len(currentGroup)):
     path.add(currentGroup[i])
