131 updated with pattern and solutions.

--- a/LeetCode/131-140/131. Palindrome Partitioning.md
+++ b/LeetCode/131-140/131. Palindrome Partitioning.md
@@ -20,7 +20,29 @@ Given a string `s`, partition `s` such that every substring of the partition is 
 * `1 <= s.length <= 16`
 * `s` contains only lowercase English letters.
 
-## BackTracking
+
+## Pattern
+
+Difference between combination and cutting:
+* Only go to next level from **valid** cutting **spot**(the **valid end** from current partition)
+
+* Template
+```python
+if startIndex >= length(set):
+    result.append(currentPath.copy())
+    return
+
+for end in range(startIndex, length(set)):
+    handle_current_subString
+    start from the valid index(valid partition end)
+    
+    backtrack(s, end + 1)
+    currentPath.pop()
+```
+
+
+
+## BackTracking(Cutting the subString)
 
 ```python
 class Solution:
@@ -34,28 +56,28 @@ class Solution:
                 left += 1
                 right -= 1
             return True
-        
-        res = []
-        # recursive check substring from start to end
+
+        res, partitions = [], []
+        # recursively check substring from start to end
         # start: start index of substring
         # curList: current partitions of string
-        def dfs(start, curList):
+        def backtrack(s, start):
             # idx reach the end, no more substring, add current partitions to res
             if start >= len(s):
                 # KEY: it has to be copy, or popping will change the result
-                res.append(curList[:])
+                res.append(partitions[:])
                 return
-        
+
             # from end to len - 1, start, end ->> 1, 2, 3 ...
             for end in range(start, len(s)):
                 # check if current substring [start, end] is palindrome
                 if isPalindrome(start, end):
-                    # add current palindrome into curList
-                    curList.append(s[start:end+1])
-                    # check the rest of the string
-                    dfs(end + 1, curList)
+                    # s[start: end+1] is valid, add to path
+                    partitions.append(s[start:end + 1])
+                    # KEY: start to cut the rest of s, start from index end
+                    backtrack(s, end + 1)
                     # backtracking, dump the previous result whenever return
-                    curList.pop()
-        dfs(0, [])
+                    partitions.pop()
+        backtrack(s, 0)
         return res
 ```
