78 updated with and solutions.

--- a/LeetCode/71-80/78. Subsets.md
+++ b/LeetCode/71-80/78. Subsets.md
@@ -22,7 +22,25 @@ The solution set **must not** contain duplicate subsets. Return the solution in 
 * `-10 <= nums[i] <= 10`
 * All the numbers of `nums` are **unique**.
 
+
+## Pattern
+
+1. **All Possible Subset**(Combinations): **Backtracking** enumeration.
+2. **add everytime** we meet a new subset
+
+**Template**:
+```python
+def backtrack(startIndex):
+    for i in range(startIndex, len(wholeset)):
+        path.append(wholeset[startIndex])
+        res.append(path.copy()) # each new subset
+        backtrack(i + 1)
+        path.pop()              # backtrack
+```
+
+
 ## Solution
+
 ```python
 class Solution:
     def subsets(self, nums: List[int]) -> List[List[int]]:
