846 updated with new solution and pattern analysis.

--- a/LeetCode/841-850/846. Hand of Straights.md
+++ b/LeetCode/841-850/846. Hand of Straights.md
@@ -19,6 +19,11 @@ Given an integer array `hand` where `hand[i]` is the value written on the `i^th`
 **Output:** `false`  
 **Explanation:** `Alice's hand can not be rearranged into groups of 4.`
 
+
+## Pattern
+1. number usage(**rearrange**, **distribute**, **regroup**, combine to subarray with specific condition, etc)
+2. use **counting**, assume count of nums are always available
+3. return false if condition not match.
  
 
 **Constraints:**
@@ -32,27 +37,24 @@ Given an integer array `hand` where `hand[i]` is the value written on the `i^th`
 ```python
 class Solution:
     def isNStraightHand(self, hand: List[int], groupSize: int) -> bool:
-        """hash table + greedy"""
-        # 1. must evenly divided by groupSize
+        # KEY:
+        # condition1: ANY number of group, with groupSize for each group
+        # condition2: consecutive: diff must be 1: prev = curr + 1
+        # Edge Case
         if len(hand) % groupSize != 0:
             return False
-        # sort for traverse
-        hand.sort()
-        # count number of each card
+        # hash table
         cnt = Counter(hand)
-        # 2. gap must be 1, prev + 1 = next
-        # start with min num x for each round
-        for x in hand:
-            # KEY: all cards of x might be used, we continue to next num
-            if cnt[x] == 0:
-                continue
-            # start from n, gap == 1
-            # use number from [x, x+groupSize-1] to form current group
-            for num in range(x, x + groupSize):
-                # no more card i for current group
-                if cnt[num] == 0:
-                    return False
-                # card i USED, count -1
-                cnt[num] -= 1
+        hand.sort()
+        for num in hand:
+            if cnt[num] > 0:
+                # form a group with numbers we have
+                for i in range(groupSize):
+                    # no more consecutive num
+                    if cnt[num + i] <= 0:
+                        return False
+                    # use the num to form current group, reduce cnt
+                    else:
+                        cnt[num + i] -= 1
         return True
 ```
